# micro-skansen

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PROJECT_STATUS_REPORT.md
src/: __init__.py  server.py  supabase_tools.py
tests/: test_agents_md.py  test_server.py
